# challenge_io

./: .dockerignore  .gitignore  Caddyfile  Caddyfile.dev  Caddyfile.prod  Dockerfile.web  Makefile  api.http  challenge_io.service  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_submission_challenge.py  0003_alter_submission_challenge.py  0004_alter_challenge_end_date_alter_challenge_start_date_and_more.py
api/serializers/: challenge.py  participation.py  submission.py  user.py
api/views/: challenge.py  submission.py  user.py
challenge_io/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile.api  Dockerfile.web  Dockerfile.web.dev
web/: package-lock.json  package.json
